--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": [
       "off"
-    ]
+    ],
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-implicit-coercion": "off",
+    "no-implicit-globals": "off"
   }
 }
