--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@caeher/nuxt-ckeditor5",
+  "private": false,
   "version": "1.0.0",
   "license": "MIT",
   "type": "module",
@@ -39,10 +40,8 @@
     "nuxt": "^3.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/caeher/nuxt-ckeditor5"
-  }
+  "repository": "https://github.com/caeher/nuxt-ckeditor5"
 }
